# h2oai-flood-prediction

./: .devdbrc  .dockerignore  .gitignore  Building_Flood_Intelligence_Agents.ipynb  Building_Flood_Prediction_Agents_Nvidia_Launchable.ipynb  CODEOWNERS  DEV_SYNC.md  Dockerfile  Dockerfile.notebook  LICENSE  MULTI_REGION_IMPLEMENTATION.md  Makefile  README.md  test.py  watershed_config.json
core/: .env.example  MANIFEST.in  Makefile  docker-entrypoint.sh  pyproject.toml  requirements-mcp.txt  requirements.server.txt  requirements.txt
core/src/flood_prediction/: api.py  data_sources.py  db.py  evaluator.py  server.py  settings.py  worker.py
core/src/flood_prediction/agents/: __init__.py  agent_manager.py  base_agent.py  data_collector.py  emergency_responder.py  h2ogpte_agent.py  mcp_unified_flood_server.py  nat_base.py  predictor.py  risk_analyzer.py  test_workflow.py
core/src/flood_prediction/agents/nat/: data_collector_config.yml  emergency_responder_config.yml  h2ogpte_agent_config.yml  predictor_config.yml  risk_analyzer_config.yml
core/src/flood_prediction/ai_providers/: __init__.py  base.py  factory.py  h2ogpte_provider.py  local_nim_llm_provider.py  nvidia_provider.py
notebooks/: Building_Flood_Prediction_Agents.ipynb  Building_Flood_Prediction_Agents_Cloud_Dev.ipynb  Building_Flood_Prediction_Agents_Nvidia_Launchable.ipynb  flood_prediction-0.1.0-py3-none-any.whl  pyproject.toml  requirements-mcp.txt  requirements.txt  run.sh  setup-venvs.sh  stop.sh
ui/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  (+2 more)
(+79 files in other folders)
