[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flood_prediction"
description = "flood_prediction is a tool to ensure the reliability and performance."
authors = [
    {name = "Piraveen Sivakumar", email = "piraveen.sivakumar@h2o.ai"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies"]

[project.scripts]
flood_prediction = "flood_prediction.__main__:main"
flood_prediction-worker = "flood_prediction.worker:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true


[tool.setuptools.dynamic]
version = { attr = "flood_prediction.__version__" }
dependencies = { file = ["requirements.txt"] }